--- a/flask_menger/static/menger/css/custom.css
+++ b/flask_menger/static/menger/css/custom.css
@@ -28,4 +28,10 @@ td.measure {
 
 .left-menu {
     padding-bottom: 1em;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
