--- a/flask_menger/static/menger/css/custom.css
+++ b/flask_menger/static/menger/css/custom.css
@@ -16,6 +16,7 @@ li.active a {
     color: lightgrey;
 }
 
+.panel-title a.glyphicon.active,
 .panel-title a.glyphicon:hover {
     color: #428BCA;
     cursor: pointer;
@@ -34,4 +35,8 @@ td.measure {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+}
+
+.option {
+    background-color: #f5f5f5;
 }
