--- a/flask_menger/templates/menger/index.html
+++ b/flask_menger/templates/menger/index.html
@@ -1,28 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+{% extends "layout.html" %}
+
+    {% block title %}
     <title>{{config.APP_NAME|capitalize}}</title>
+    {% endblock %}
+    
+    {% block head %}
     <link href="{{url_for('menger.static', filename='css/libs.css')}}" rel="stylesheet">
     <link href="{{url_for('menger.static', filename='css/custom.css')}}" rel="stylesheet">
     <script src="{{url_for('menger.static', filename='js/libs.js')}}"></script>
     <script src="{{url_for('menger.static', filename='js/custom.js')}}"></script>
-
-  </head>
-  <body>
-
-
-    <div class="container">
-      <div class="row">
-        <div class="col-md-9 col-sm-9">
-          <h3>{{config.APP_NAME|capitalize}}</h3>
-        </div>
-
-        <div class="col-md-3 col-sm-3">
-        </div>
-      </div>
+    {% endblock %}
+    
+    {% block container %}
 
       <div class="row">
         <div class="col-md-3 col-sm-3 left-menu">
@@ -74,9 +63,9 @@
         </div>
 
       </div> <!-- /.row -->
-    </div> <!-- /.container -->
+    {% endblock %}
 
-
+    {% block postscripts %}
     <script type="text/html" id="measure_tpl">
       <div class="panel panel-default">
         <div class="panel-heading">
@@ -147,6 +136,4 @@
         </div>
 
     </script>
-
-  </body>
-</html>
+    {% endblock %}    
