--- a/flask_menger/templates/menger/index.html
+++ b/flask_menger/templates/menger/index.html
@@ -20,11 +20,13 @@
           </div>
           <div class="btn-group">
             <button type="button" class="btn btn-default"
+                    title="Remove measure"
                     data-bind="click: pop_measure,
                                attr:{disabled: measures().length <= 1}">
               <span class="glyphicon glyphicon-minus"></span>
             </button>
             <button type="button" class="btn btn-default"
+                    title="Add measure"
                     data-bind="click: push_measure">
               <span class="glyphicon glyphicon-plus"></span>
             </button>
@@ -37,11 +39,13 @@
           </div>
           <div class="btn-group">
             <button type="button" class="btn btn-default"
+                    title="Remove dimension"
                     data-bind="click: pop_dim_select,
                                attr:{disabled: dim_selects().length <= 1}">
               <span class="glyphicon glyphicon-minus"></span>
             </button>
             <button type="button" class="btn btn-default"
+                    title="Add dimension"
                     data-bind="click: push_dim_select">
               <span class="glyphicon glyphicon-plus"></span>
             </button>
