--- a/flask_menger/templates/menger/index.html
+++ b/flask_menger/templates/menger/index.html
@@ -15,7 +15,7 @@
 
 {% block container %}
 <div class="row">
-  <div class="col-md-4 col-sm-4 left-menu">
+  <div class="col-md-3 col-sm-3 left-menu">
     <h4>Measures</h4>
     <div class="panel-group" id="measures"
          data-bind="template: {name: 'measure_tpl', foreach: measures}">
@@ -62,22 +62,26 @@
     </a>
   </div>
 
-  <div class="col-md-8 col-sm-8">
-    <table class="table table-hover table-bordered">
-      <thead>
-        <tr data-bind="foreach: columns_headers">
-          <th data-bind="text: name, attr: {'colspan': colspan}"></th>
-        </tr>
-        <tr data-bind="foreach: columns">
-          <th data-bind="text: label"></th>
-        </tr>
-      </thead>
-      <tbody data-bind="foreach: {data: data, as: 'line'}">
-        <tr data-bind="foreach: $parent.columns">
-          <td data-bind="text: line[$index()], css: type"></td>
-        </tr>
-      </tbody>
-    </table>
+  <div class="col-md-9 col-sm-9">
+    <div class="panel panel-default">
+      <div class="panel-body">
+        <table class="table table-hover">
+          <thead>
+            <tr data-bind="foreach: columns_headers">
+              <th data-bind="text: name, attr: {'colspan': colspan}"></th>
+            </tr>
+            <tr data-bind="foreach: columns">
+              <th data-bind="text: label, css: type"></th>
+            </tr>
+          </thead>
+          <tbody data-bind="foreach: {data: data, as: 'line'}">
+            <tr data-bind="foreach: $parent.columns">
+              <td data-bind="text: line[$index()], css: type"></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
   </div>
 
 </div> <!-- /.row -->
