Better menu box look:
- Remove margin at the bottom
- Set max height to an uneven value to give visual clue that there is
  an overflow

--- a/flask_menger/static/menger/css/menger.css
+++ b/flask_menger/static/menger/css/menger.css
@@ -7,7 +7,7 @@ li.active a {
 }
 
 .list-group {
-    max-height: 20em;
+    max-height: 21em;
     overflow: auto;
 }
 
@@ -52,4 +52,5 @@ td.measure, th.measure {
 
 .list-group.menu-list {
     border-top: 1px solid #DDD;
+    margin-bottom: 0;
 }
