--- a/flask_menger/templates/menger/index.html
+++ b/flask_menger/templates/menger/index.html
@@ -167,8 +167,7 @@
       </div>
 
       <div data-bind="if:!show_options()">
-        <ul class="list-group menu-list" data-bind="foreach:choice"
-            style="border-top: 1px solid #DDD">
+        <ul class="list-group menu-list" data-bind="foreach:choice">
           <li class="list-group-item clearfix menu-item"
               data-bind="css: {active: active()}">
             <a href="#"
