Add reordering on dimension menu

--- a/flask_menger/templates/menger/index.html
+++ b/flask_menger/templates/menger/index.html
@@ -162,7 +162,24 @@
               </ul>
             </div>
             <!-- /ko -->
-          </div> <!-- /options -->
+          </div>
+
+          <h5>Move:</h5>
+          <div class="btn-group">
+            <button type="button" class="btn btn-default" title="Move up"
+                    data-bind="click: move_up">
+              <span class="glyphicon glyphicon-chevron-up"></span>
+            </button>
+            <button type="button" class="btn btn-default" title="Move down"
+                    data-bind="click: move_down">
+              <span class="glyphicon glyphicon-chevron-down"></span>
+            </button>
+            <button type="button" class="btn btn-default" title="Remove"
+                    data-bind="click: remove">
+              <span class="glyphicon glyphicon-remove"></span>
+            </button>
+          </div>
+
         </div>
       </div>
 
