--- a/flask_menger/static/menger/css/menger.css
+++ b/flask_menger/static/menger/css/menger.css
@@ -27,6 +27,11 @@ td.measure, th.measure {
     text-align: right;
 }
 
+td.group, th.group {
+    text-align: center;
+    border-right: 8px solid white;
+}
+
 .totals td {
     text-align: right;
     font-weight: bold;
