--- a/flask_menger/templates/menger/index.html
+++ b/flask_menger/templates/menger/index.html
@@ -18,7 +18,7 @@
 
 {% block container %}
 <div class="row">
-  <div class="col-md-3 col-sm-3 left-menu">
+  <div class="col-sm-3 left-menu" data-bind="visible: show_menu">
     <h4>Measures</h4>
     <div class="panel-group" id="measures"
          data-bind="template: {name: 'measure_tpl', foreach: measures}">
@@ -61,7 +61,7 @@
     <h4>Options</h4>
     <div class="form-group">
       <label class="checkbox-inline">
-        <input type="checkbox" id="inlineCheckbox1"
+        <input type="checkbox"
                data-bind="checked: skip_zero">
         Hide empty lines
       </label>
@@ -77,20 +77,32 @@
 
 
 
-  <div class="col-md-9 col-sm-9">
-
-
+  <div data-bind="css: show_menu() ? 'col-sm-9': 'col-sm-12'">
     <div class="panel panel-default">
-      <!-- <div class="panel-heading"> -->
-      <!--   <ul class="nav nav-pills"> -->
-      <!--     <li class="active"> -->
-      <!--       <a href="#table" data-toggle="tab">Table</a> -->
-      <!--     </li> -->
-      <!--     <li class=""> -->
-      <!--       <a href="#graphs" data-toggle="tab">Graphs</a> -->
-      <!--     </li> -->
-      <!--   </ul> -->
-      <!-- </div> <\!-- /.panel-heading -\-> -->
+      <div class="panel-heading">
+        <ul class="nav nav-pills">
+          <li class="active">
+            <a href="#table" data-toggle="tab" data-bind="click: set_active_view">
+              Table
+            </a>
+          </li>
+          <li>
+            <a href="#graph" data-toggle="tab" data-bind="click: set_active_view">
+              Graphs
+            </a>
+          </li>
+          <li class="pull-right">
+            <button type="button" class="btn btn-primary"
+                    data-toggle="button" aria-pressed="false"
+                    autocomplete="off"
+                    data-bind="click: toggle_show_menu">
+              <span class="glyphicon glyphicon-fullscreen"></span>
+            </button>
+          </li>
+        </ul>
+        <div class="btn-group pull-right" data-toggle="buttons">
+        </div>
+      </div> <!-- /.panel-heading -->
 
       <div class="panel-body">
 
@@ -99,7 +111,7 @@
             <table class="table table-hover">
               <thead>
                 <tr data-bind="foreach: columns_headers">
-                  <th data-bind="text: name, attr: {'colspan': colspan}"></th>
+                  <th data-bind="text: name, attr: {'colspan': colspan}, css: type"></th>
                 </tr>
                 <tr data-bind="foreach: columns">
                   <th data-bind="text: label, css: type"></th>
@@ -119,7 +131,9 @@
               </tfoot>
             </table>
           </div> <!-- /#table -->
-          <div class="tab-pane" id="graphs">
+          <div class="tab-pane" id="graph">
+            <div id="vis"></div>
+            <span id="vis_tip" class="text-muted small"></span>
           </div><!-- /#graph -->
         </div> <!-- /.tab-content -->
 
@@ -205,6 +219,14 @@
               </ul>
             </div>
             <!-- /ko -->
+          </div>
+
+          <h5>Orientation:</h5>
+          <div class="form-group">
+            <label class="checkbox-inline">
+              <input type="checkbox" data-bind="checked: pivot">
+              As column
+            </label>
           </div>
 
           <h5>Move:</h5>
