--- a/flask_menger/static/menger/css/menger.css
+++ b/flask_menger/static/menger/css/menger.css
@@ -65,12 +65,24 @@ td.group, th.group {
     margin-bottom: 0;
 }
 
-svg {
-    height: 300px;
+.svg-wrapper {
+    box-sizing: border-box;
+    width: 100%;
+    height: 500px;
     float: left;
-    padding: 10px;
+    border: 5px solid white;
+    padding: 5px;
+    background-color: whitesmoke;
 }
 
+.multi {
+    width: 50%;
+    height: 400px;
+}
+
+svg {
+    padding-top: 10px;
+}
 .nvtooltip *{
     font-size: 0.8em;
 }
