--- a/flask_menger/templates/menger/index.html
+++ b/flask_menger/templates/menger/index.html
@@ -117,6 +117,9 @@
       </div> <!-- /.panel-heading -->
 
       <div class="panel-body">
+        <div class="alert alert-danger" role="alert" data-bind="visible: error">
+          <p data-bind="text: error"></p>
+        </div>
 
         <div class="tab-content" style="overflow-x: auto">
           <div class="tab-pane active" id="table">
